# otel-to-mongodb

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEPLOYMENT.md  Dockerfile  FIXTURE_REFACTORING_SUMMARY.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: spec-config.json
.claude/scripts/: generate-commands.bat  generate-commands.sh
.claude/specs/add_protobuff/: design.md  requirements.md  tasks.md
.claude/templates/: tasks-template.md
.github/workflows/: ci.yml  integration-test.yml
app/: __init__.py  content_handler.py  handlers.py  main.py  models.py  mongo_client.py  otel_service.py  protobuf_parser.py
app/tests/: __init__.py  conftest.py  test_content_handler.py  test_content_handler_unified.py  test_error_handling.py  test_integration.py  test_lifespan.py  test_main.py  test_models.py  test_mongo_client.py  test_otel_service.py  test_protobuf_parser.py  unified_fixtures.py
app/tests/fixtures/: otel_data.py  protobuf_data.py
app/tests/helpers/: test_utils.py
app/tests/integration/: conftest.py  fixtures.py  test_integration.py  test_protobuf_integration.py  test_unified_integration.py
scripts/: docker_deploy.sh  lambda_test_event.json  test_api_gateway.sh  test_local.sh
